2026-01-19  Zhengyi Fu  <i@fuzy.me>

	* init.el (+gnus-read-ephemeral-public-inbox-search-group): New command.

2026-01-19  Zhengyi Fu  <i@fuzy.me>

	* transient/levels.el (magit-log): Set level of first-parent to 1.

2026-01-16  Zhengyi Fu  <i@fuzy.me>

	* user-lisp/gptel-config.el (+gptel-language-tutor-primary-selection): New command.

2026-01-15  Zhengyi Fu  <i@fuzy.me>

	* user-lisp/tui.el (tui-recentf): Filter out remote files.

2026-01-14  Zhengyi Fu  <i@fuzy.me>

	* init.el: Remove some packages (pulsar, corfu-terminal, lin, logos).

2026-01-14  Zhengyi Fu  <i@fuzy.me>

	* init.el: Add `dotemacs-theme-refresh' to `emacs-startup-hook'.

2026-01-14  Zhengyi Fu  <i@fuzy.me>

	Fix consult configuration error

	* init.el: Change consult--source-recent-file to
	consult-source-recent-file.

2026-01-14  Zhengyi Fu  <i@fuzy.me>

	Remove some unneeded autoloads.

	* init.el (quick-window-jump, list-backups, backup-list-backups)
	(consult-ugrep, consult-kill, cmake-capf-setup, flymake-systemd)
	(good-doc-lookup, rust-docs-lookup, pp-posframe-eval-last-sexp)
	(pp-posframe-compile-defun, pp-posframe-macroexpand-last-sexp)
	(flymake-clang-tidy, flymake-checkbashisms, tui-run, tui-rg)
	(tui-ugrep, tui-yazi, tui-kill, tui-line, tui-find, tui-locate)
	(image-slicing-mode, url-bookmark-add, org-store-link)
	(consult-browser-hist, sftp): Remove autoload form.
	(embark-help-key): Set to "?".
	(sh-mode-hook): Add `flymake-mode'.

2026-01-14  Zhengyi Fu  <i@fuzy.me>

	Update tencent-cos.el

	* user-lisp/tencent-cos.el: (tencent-cos)
	(tencent-cos-default-link-validity, tencent-cos-default-bucket)
	(tencent-cos-default-region): Change global vars into user options.
	(tencent-cos-get-new-url, tencent-cos-get-url)
	(tencent-cos-put-buffer, tencent-cos-put-file): Autoload.

2026-01-13  Zhengyi Fu  <i@fuzy.me>

	* init.el (magit-openpgp-default-signing-key): Unset.

2026-01-13  Zhengyi Fu  <i@fuzy.me>

	* init.el (undo-fu-session-compression): Set to zst.
